--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,18 +1,23 @@
 :global {
   @import 'base';
   @import '~normalize.css/normalize';
+  @import '~fonts.css/fonts';
 
   // Some best-practice CSS that's useful for most apps
   // Just remove them if they're not what you want
-  html {
-    box-sizing: border-box;
-  }
-
   html,
   body {
     margin: 0;
     padding: 0;
     height: 100%;
+  }
+
+  html {
+    box-sizing: border-box;
+  }
+
+  body {
+    @extend .font-hei;
   }
 
   *,
