通过 scale 兼容不同屏幕显示

--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -3,9 +3,13 @@ body.wrap-bg {
   background: radial-gradient(circle, #f9fcff 20%, #e2eff7 50%, #b1d4e7 100%);
 }
 
-.m-nav {
-  width: 800px;
-  height: 640px;
+:local(.m-nav) {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0);
 
   :global {
     a {
