--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,6 +1,6 @@
 :global {
   @import 'base';
-  @import '~normalize.css/normalize';
+  //@import '~normalize.css/normalize';
   @import '~fonts.css/fonts';
 
   // Some best-practice CSS that's useful for most apps
