--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -109,9 +109,9 @@ body.wrap-bg {
     .css:hover .link-btn {
       color: #3ea8ca;
 
-      &:before {
-        content: 'Coming Soon';
-      }
+      //&:before {
+      //  content: 'Coming Soon';
+      //}
     }
 
     .blog:hover .link-btn {
