--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -22,6 +22,7 @@ body
   overflow-x hidden
   overflow-y auto
   scroll-behavior smooth
+  -webkit-overflow-scrolling touch
 
 a
   &, &:active, &:hover, &:visited
