no CNAME, redirect on client

--- a/server/template.pug
+++ b/server/template.pug
@@ -5,6 +5,10 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="description" content="try to learn using React with server slide render deeply")
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    script.
+      if (location.hostname.indexOf('.github.io') !== -1) {
+        location.href = 'https://www.1stg.me'
+      }
     style.
       #skip a {
          position: absolute;
