--- a/server/template.pug
+++ b/server/template.pug
@@ -8,6 +8,12 @@ html(lang="en")
     script.
       if (location.hostname.indexOf('.github.io') !== -1) {
         location.href = 'https://www.1stg.me'
+      } else {
+        const canvas = document.createElement('canvas')
+        canvas.width = canvas.height = 1
+        if (canvas.toDataURL && canvas.toDataURL('image/webp').indexOf('image/webp') === 5) {
+          document.documentElement.classList.add('webp')
+        }
       }
     style.
       #skip a {
