wrap script into closure

--- a/server/template.pug
+++ b/server/template.pug
@@ -6,15 +6,17 @@ html(lang="en")
     meta(name="description" content="try to learn using React with server slide render deeply")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     script.
-      if (location.hostname.indexOf('.github.io') !== -1) {
-        location.href = 'https://www.1stg.me'
-      } else {
+      (function(){
+        if (location.hostname.indexOf('.github.io') !== -1) {
+          location.href = 'https://www.1stg.me'
+          return
+        }
         var canvas = document.createElement('canvas')
         canvas.width = canvas.height = 1
         if (canvas.toDataURL && canvas.toDataURL('image/webp').indexOf('image/webp') === 5) {
           document.documentElement.classList.add('webp')
         }
-      }
+      })()
     style.
       #skip a {
          position: absolute;
