improvement compatibility for mobile view

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,6 +23,12 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
   scroll-behavior: smooth;
+  background-image: radial-gradient(
+    circle,
+    #f9fcff 20%,
+    #e2eff7 50%,
+    #b1d4e7 100%
+  );
 }
 
 a {
