--- a/src/views/Home/grid.scss
+++ b/src/views/Home/grid.scss
@@ -3,11 +3,11 @@
     @return $number;
   }
 
-  @return -1*$number;
+  @return -1 * $number;
 }
 
 @function sqrt($square, $tolerance: 0.001, $estimate: $square/2) {
-  @if abs($square - $estimate*$estimate) < $tolerance {
+  @if abs($square - $estimate * $estimate) < $tolerance {
     @return $estimate;
   }
 
@@ -199,26 +199,27 @@ $bg-size: $content-size * 2;
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0) rotate(-45deg);
-  // width: $content-size;
-  // height: $content-size;
   text-align: center;
 }
 
 .wrapper {
   position: absolute;
-  // top: 50%;
-  // left: 50%;
   transform: translate3d(-50%, -50%, 0);
 
   button {
+    padding: 0 40px;
     border: 1px solid #fff;
     border-radius: 0;
-    width: 180px;
     height: 50px;
     margin-top: 10px;
     transition: all 1s linear;
     color: inherit;
     background-color: transparent;
     cursor: inherit;
+    white-space: nowrap;
+
+    @media (max-width: 500px) {
+      padding: 0 20px;
+    }
   }
 }
