--- a/src/views/Home/grid.scss
+++ b/src/views/Home/grid.scss
@@ -20,15 +20,15 @@ $bg-size: $content-size * 2;
 
 :global(.webp) {
   .rubick:after {
-    background-image: url('assets/site1.webp');
+    background-image: url('~assets/site1.webp');
   }
 
   .react-hn:after {
-    background-image: url('assets/site2.webp');
+    background-image: url('~assets/site2.webp');
   }
 
   .blog:after {
-    background-image: url('assets/site3.webp');
+    background-image: url('~assets/site3.webp');
   }
 }
 
@@ -122,7 +122,7 @@ $bg-size: $content-size * 2;
   }
 
   &:after {
-    background-image: url('assets/site1.png');
+    background-image: url('~assets/site1.png');
   }
 }
 
@@ -136,7 +136,7 @@ $bg-size: $content-size * 2;
   }
 
   &:after {
-    background-image: url('assets/site2.png');
+    background-image: url('~assets/site2.png');
   }
 }
 
@@ -150,7 +150,7 @@ $bg-size: $content-size * 2;
   }
 
   &:after {
-    background-image: url('assets/site3.png');
+    background-image: url('~assets/site3.png');
   }
 }
 
