--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -5,3 +5,17 @@
     color: #fff;
   }
 }
+
+.record {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  line-height: 24px;
+
+  &,
+  a {
+    color: #666;
+  }
+}
